@@ -1,4 +1,7 @@
 2013-07-30  Jean-Louis Martineau <martineau@zmanda.com>
+	* perl/Amanda/Report/json.pm: Fix doc formating.
+
+2013-07-30  Jean-Louis Martineau <martineau@zmanda.com>
 	* perl/Amanda/JSON.pm: Add missing Amanda::JSON modules.
 
 2013-07-30  Jean-Louis Martineau <martineau@zmanda.com>
